# ResumeBuilder

./: Cargo.toml  README.md  index.html
docs/: architecture.md  clean_architecture.md  themes.md
src/: lib.rs  main.rs  models.rs
src/application/: mod.rs  repository.rs  use_cases.rs
src/domain/: mod.rs  models.rs  sample_data.rs
src/infrastructure/: mod.rs  storage.rs
src/presentation/: mod.rs  view_model.rs
src/presentation/components/: draggable_section.rs  education_form.rs  experience_form.rs  export_modal.rs  mod.rs  personal_info.rs  personal_info_form.rs  projects_form.rs  resume_preview.rs  skills_form.rs  tab.rs  theme_selector.rs  toggle_button.rs
