[package]
name = "ResumeBuilder"
version = "0.1.0"
edition = "2021"

[features]
web = []

[dependencies]
dioxus = { version = "0.6.3", features = ["web", "macro"] }
dioxus-core = "0.6.3"
dioxus-core-macro = "0.6.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dependencies.web-sys]
version = "0.3.60"
features = [
    "Window",
    "Storage",
]

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
